--- a/app/views/home/index_02.html.erb
+++ b/app/views/home/index_02.html.erb
@@ -8,70 +8,14 @@
       <div class="wrap">
 
         <div class="home_top clearfix">
-          <!-- <div class="translate">
-             <div id="google_translate_element"></div>
-            <script type="text/javascript">
-            function googleTranslateElementInit() {
-              new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-            }
-            </script>
-            <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-          </div> -->
           <div class="search_box">
             <%= form_for "",url: gadgets_path, role: "search", method: :get do %>
             <%= text_field_tag :search, @search_term, placeholder: "Search..." %>
             <% end %>
           </div>
         </div>
-   
-        <div class="card_wrap clearfix">
-          <% @gadgets.each do |gadget| %>
-            <div class="card with-photo">
-              <div class="card-header">
-               <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt="<%= gadget.gg_title %>" title="<%= gadget.gg_spare_05 %>"></a>
-              </div>
-              
-              <section class="card-body">
-                
-                <% if gadget.gg_youtube01.present? %>
-                  <div class="js-overlay-start start" data-url= "<%= gadget.gg_youtube01 %>">
-                    <button><img src="<%=asset_path 'youtube_02.png' %>" alt="Play Youtube" /></button>
-                  </div>
-                <% end %>
-
-                <% if gadget.gg_option_01.present? %>
-                  <div class="crowdfunding">
-                    <p>#crowdfunding</p>
-                  </div>
-                <% end %>
-
-                <% if gadget.gg_title.present? %>
-                  <span>BY <%= gadget.gg_from %></span> 
-                  <% if gadget.gg_option_02.present? %>
-                    <a class="to_featured" href="<%= gadget.gg_option_02 %>">Discover More</a>
-                  <% end %>
-                  <!-- <h4><a target="_blank" href="<%= gadget.gg_url %>"><%= gadget.gg_title %></a></h4> -->
-                  <h4><%= link_to gadget.gg_title, gadget %></h4>
-                  <!-- <p><%= gadget.gg_intro %></p> -->
-
-                  <div class="btn clearfix">
-                    <% if gadget.gg_option_03.present? %>
-                     <a class="learnmore" target="_blank" href="<%= gadget.gg_url %>">Learn More</a>
-                    <% else %>
-                    <em>$<%= gadget.gg_aprice %></em><a target="_blank" href="<%= gadget.gg_url %>">Buy Now</a>
-                    <% end %>
-                  </div>
-
-                <% end %>
-                <% if can? :update, gadget %>
-                  <div class="btn clearfix admin">
-                    <em><%= link_to "Edit", edit_gadget_path(gadget) %></em><%= link_to "Delete", gadget_path(gadget), method: :delete, data: {confirm: "Are you sure?"}%>
-                  </div>   
-                <% end %>
-              </section>
-            </div>
-          <% end %>
-        </div><!--./card_wrap-->
+        
+        <%= render 'home/gadget' %>
         <%= will_paginate @gadgets %>
     </div><!--./wrap-->
   </div><!--./gadgets-->
