--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -70,6 +70,7 @@
 .deals_card h3, .deals_card p{margin:0;}
 .deals_card h3{font-size:20px;font-weight:700;margin-bottom:10px;z-index:101;}
 .deals_card p{font-size:0.9em;letter-spacing:1px;font-weight:400;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
+.deals_card p a{text-decoration:none;color:#000;}
 .deals_card .price{font-weight:500;font-size:1.5em;line-height:48px;letter-spacing:1px;}
 .deals_card .price em{margin-right:5px;opacity:0.5;font-size:0.9em;}
 .deals_card a.btn{position:absolute;top:0;bottom:0;left:0;right:0;}
