--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -19,6 +19,7 @@
     </div>
     
     <%= f.input :h_keyword, label: 'Keyword (  gadgets, amazon, under, recommended  )' %>
+    <%= f.input :h_spare_05, label: 'Hashtags' %>
 
     <%= f.button :submit %>
 
