--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -20,6 +20,7 @@
         <%= f.input :h_spare_01, label: 'Extra Deals?' %>
         <%= f.input :h_spare_02, label: 'Coupon Deals?' %>
         <%= f.input :h_keyword, label: 'Keyword (gadgets, amazon, under, recommended)' %>
+        <%= f.input :h_spare_05, label: 'Hashtags' %>
 
         <%= f.button :submit %>
 
