before adding promocodes model

--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -9,18 +9,20 @@
 
         <%= f.input :himage, label: 'Choose Image' %>
         <%= f.select :h_spare_03, ([["Do You Have A Banner?", ""], "YES"])%><br /><br />
-        <%= f.input :h_title , label: 'Title Of Product' %>
-        <%= f.input :h_spare_04, label: 'Image_Title' %>
-        <%= f.input :h_description, label: 'Description Of Product' %>
         <%= f.input :h_image, label: 'Image URL' %>
         <%= f.input :h_link, label: 'Product URL' %>
-        <%= f.input :h_list_price, label: 'List Price' %>
-        <%= f.input :h_price, label: 'Current Price' %>
-        <%= f.input :h_percentage, label: 'Discount Percentage' %>
-        <%= f.input :h_spare_01, label: 'Extra Deals?' %>
-        <%= f.input :h_spare_02, label: 'Coupon Deals?' %>
-        <%= f.input :h_keyword, label: 'Keyword (gadgets, amazon, under, recommended)' %>
+        <%= f.input :h_title , label: 'Title Of Product' %>
+        <%= f.input :h_spare_04, label: 'Image_Title' %>
         <%= f.input :h_spare_05, label: 'Hashtags' %>
+        <div class="pricing">
+          <%= f.input :h_list_price, label: 'List Price' %>
+          <%= f.input :h_price, label: 'Current Price' %>
+          <%= f.input :h_percentage, label: 'Discount Percentage' %>
+          <%= f.input :h_spare_02, label: 'Coupon Deals?' %>
+          <%= f.input :h_spare_01, label: 'Extra Deals?' %>
+        </div>
+        <%= f.input :h_description, label: 'Description Of Product' %>
+        <%= f.input :h_keyword, label: 'Keyword (  gadgets, amazon, under, recommended  )' %>
 
         <%= f.button :submit %>
 
