--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -10,7 +10,7 @@
     <%= f.input :h_title , label: 'Title Of Product' %>
     <%= f.input :h_spare_04, label: 'Image_Title' %>
     <%= f.input :h_spare_05, label: 'Hashtags' %>
-    <div class="pricing">
+    <div class="pricing clearfix">
       <%= f.input :h_list_price, label: 'List Price' %>
       <%= f.input :h_price, label: 'Current Price' %>
       <%= f.input :h_percentage, label: 'Discount Percentage' %>
