--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -465,8 +465,11 @@ header .gnb_m,header .gnb_open2{display:none;}
 }
   
 /* Amazon Search3 */
-div#amzn-native-ad-0 .amzn-native-header{display:none;}
-div#amzn-native-ad-0 div.amzn-native-category-trigger-area{background-color:none;background:#000;}
+.amz_search{margin:7px 0;}
+.amz_search div#amzn-native-ad-0 .amzn-native-header{display:none;}
+.amz_search div#amzn-native-ad-0 div.amzn-native-category-trigger-area{background:#000;color:#fff;}
+.amz_search div#amzn-native-ad-0 .amzn-native-search-bar .amzn-native-search-bar-content .amzn-native-search-bar-form-holder input.amzn-native-search-go{background:#000;color:#fff;}
+.amz_search div#amzn-native-ad-0 .amzn-native-search-bar.amzn-native-search-bar-top .amzn-native-search-bar-content{width:100%;}
 
 
 /* Error Page */
