--- a/app/views/hotdeals/_hotdeal.html.erb
+++ b/app/views/hotdeals/_hotdeal.html.erb
@@ -1,6 +1,12 @@
 <!-- < @hotdeals.each do |hotdeal| > -->
   <figure class="deals_card">
-    <div class="image_box"><%= link_to image_tag(hotdeal.h_image), hotdeal %></div>
+    <div class="image_box">
+     <% if hotdeal.h_image.present? %>
+      <%= link_to image_tag(hotdeal.h_image), hotdeal %>
+     <% else %>
+      <%= link_to (image_tag hotdeal.himage.url(:small), alt: hotdeal.h_title, title: hotdeal.h_spare_04), hotdeal %>
+     <% end %>
+    </div>
     <div class="buy-now"><span><a target="_blank" href="<%= hotdeal.h_link %>">BUY NOW</a></span></div>
     <figcaption>
       <h3><%= render_with_hashtags(hotdeal.h_spare_05.to_s) %></h3>
@@ -8,7 +14,7 @@
       <div class="price">
         <em>$<%= hotdeal.h_list_price %></em>$<%= hotdeal.h_price %>
       </div>
-      <div class="m_btn"><a href="#n">Buy Now</a></div>
+      <div class="m_btn"><a href="<%= hotdeal.h_link %>">Buy Now</a></div>
     </figcaption>
   </figure>
 <!-- < end >  -->
