--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -28,7 +28,7 @@
         </div>
         <div class="show_inner">
          <div class="hotdeal_inner">
-           <h2><%= @hotdeal.h_title %></h2>
+           <h2 class="title"><%= @hotdeal.h_title %></h2>
 
            <p class="h_price">$<%= @hotdeal.h_price %> <span class="span_01">$<%= @hotdeal.h_list_price %></span><span class="span_02">( <%= @hotdeal.h_percentage %>% OFF )</span></p>
            <div class="extra_info">
