--- a/app/views/promocodes/index.js.erb
+++ b/app/views/promocodes/index.js.erb
@@ -1,7 +1,2 @@
-$('#promocodes').append('<%= j render(@promocodes) %>');
-<% if @promocodes.next_page %>
-  $('.promo_paginate .pagination').replaceWith('<%= j will_paginate(@promocodes) %>');
-<% else %>
-  $('.promo_paginate .pagination').remove();
-<% end %>
+<%= infinite_append ".list-news ul", { partial: "promocodes/promocode", collection: @promocodes }  %>
 <% sleep 1 %>
