--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require main
+ *= require will_paginate_infinite
  *= require font-awesome
  *= require_tree .
  *= require_self
