before adding hashtag for promocodes

--- a/app/views/hotdeals/index.html.erb
+++ b/app/views/hotdeals/index.html.erb
@@ -7,16 +7,11 @@
     <div class="dealpage_title"><p>The Best Bargain</p></div>
     <%= render 'hotdeals/header' %>  
     
-    <div class="list-news">
-      <ul>
-        <% @hotdeals.each do |hotdeal| %>
-          <%= render hotdeal %> 
-        <% end %>
-      </ul>
-      <%= will_paginate @hotdeals, renderer: WillPaginateInfinite::InfinitePagination %>
-    </div>
-    
-    
+      <div id="hotdeals">      
+        <%= render @hotdeals %> 
+      </div>
+      <%= will_paginate @hotdeals %>
+
   </div><!--./warp-->
 </div><!--./layout-->
 <script><%= render(:partial => 'hotdeals', :handlers => [:erb], :formats => [:js]) %></script>
