--- a/app/views/hotdeals/index.js.erb
+++ b/app/views/hotdeals/index.js.erb
@@ -1,9 +1,7 @@
-// $('#hotdeals').append('<%= j render(@hotdeals) %>');
-// <% if @hotdeals.next_page %>
-//   $('.pagination').replaceWith('<%= j will_paginate(@hotdeals) %>');
-// <% else %>
-//   $('.pagination').remove();
-// <% end %>
-// <% sleep 1 %>
-
-<%= infinite_append ".list-news ul", @hotdeals %>
+$('#hotdeals').append('<%= j render(@hotdeals) %>');
+<% if @hotdeals.next_page %>
+  $('.pagination').replaceWith('<%= j will_paginate(@hotdeals) %>');
+<% else %>
+  $('.pagination').remove();
+<% end %>
+<% sleep 1 %>
