--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,7 +4,7 @@
 
     <div class="about_us">
       <div class="mission sections clearfix">
-        <p class="headline">ABOUT</p>
+        <p class="headline">ABOUT<em><a href="/users/sign_in">welcome</a></em></p>
         <h2 class="under_head">It is discount platform but also trending item platform.</h2>
         <div class="left">
           <p><span>#1</span> "Oh,igottabuythis"is the curation platform to discover awesome products from around the world. Staying up to date with the latest tech, the newest brilliant inventions, odd gadgets unique & weird design products.</p>
