--- a/app/views/guides/halloween.html.erb
+++ b/app/views/guides/halloween.html.erb
@@ -6,14 +6,14 @@
     <h2>Gift for people who are CRAZY about BATMAN!</h2>
   </div> -->
 
-  <div class="guide_location clearfix">
+<!--   <div class="guide_location clearfix">
    <ul>
       <li><a href="/">HOME <em>/</em></a></li>
       <li><a href="/recommends">FEATURED <em>/</em></a></li>
       <li><a href="/guides/index">GIFT GUIDES <em>/</em></a></li>
       <li class="last"><a href="/guides/guide_05">HALLOWEEN</a></li>
     </ul>
-  </div>
+  </div> -->
   
   <div class="guide_show_header">
     <span>HALLOWEEN</span>
