--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -22,7 +22,8 @@
             <div class="admin">
               <%= link_to 'Back', promocodes_path %> |
               <%= link_to 'Edit', edit_promocode_path(@promocode) %> |
-              <%= link_to 'Delete', @promocode, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <%= link_to 'Delete', @promocode, method: :delete, data: { confirm: 'Are you sure?' } %> |
+              <%= @promocode.impressionist_count %> Views
             </div>
           <% end %>
         </div>
